--- a/config_1.html
+++ b/config_1.html
@@ -44,7 +44,8 @@
 
 			<div data-role="fieldcontain">
 				<legend><strong>Enter Data Endpoint:</strong></legend>
-				<input type="text" name="endpoint" id="endpoint" />
+				<input type="text" name="endpoint" id="endpoint" autocapitalize="off"
+                autocorrect="off"/>
 			</div>
 			<div>
 				ie: http://name.azurewebsites.net/api/v1/treatments/
@@ -59,7 +60,8 @@
 			</div>
 			<div data-role="fieldcontain">
 				<legend><strong>Enter Secret API:</strong></legend>
-				<input type="text" name="secretAPI" id="secretAPI" />
+				<input type="text" name="secretAPI" id="secretAPI" autocapitalize="off"
+                autocorrect="off"/>
 			</div>
 			<div>
 				Enter your secret API and Submit will convert it to SHA-1 hash
